--- a/_includes/views/post-header.html
+++ b/_includes/views/post-header.html
@@ -5,8 +5,9 @@
   <p class="post-meta">
     <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
       {%- assign date_format = site.yat.date_format | default: "%b %-d, %Y" -%}
-      <i class="fa fa-calendar"></i> {{ page.date | date: date_format }}
+      {{ page.date | date: date_format }}
     </time>
+    <span class="left-vsplit">{{ page.author }}</span>
 
     {% assign article = page.content %}
     {% assign lang = page.lang %}
