라이트 모드 목차 hover css 수정

--- a/_sass/misc/article-menu.scss
+++ b/_sass/misc/article-menu.scss
@@ -42,7 +42,7 @@
         &:hover {
           text-decoration: none;
           //color: lighten($text-color, 20%)!important;
-          color: #6DA7E3;
+          color: #05BF85;
         }
       }
 
