--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -186,7 +186,7 @@ pre {
   max-width: $content-width;
   margin: auto;
   padding-right: $spacing-unit;
-  padding-left: $spacing-unit + 200px;
+  padding-left: $spacing-unit;
   @extend %clearfix;
 }
 
