--- a/_sass/misc/article-menu.scss
+++ b/_sass/misc/article-menu.scss
@@ -25,15 +25,14 @@
         .h-h#{$i} {
           padding-inline-start: $indent + ($i - 2) * $base-font-size * 1.3;
           font-size: $base-font-size * 1.1;
-          line-height: 2;
+          line-height: 1.4;
         }
       }
 
       a {
         display: flex;
         padding: 2px 8px;
-        //color: darken($text-color, 10%);
-        color: #454545;
+        color: darken($text-color, 10%);
 
         * {
           pointer-events: none;
@@ -41,24 +40,22 @@
 
         &:hover {
           text-decoration: none;
-          //color: lighten($text-color, 20%)!important;
-          color: #05BF85;
+          color: lighten($text-color, 20%)!important;
         }
       }
 
       .active {
-        //background-color: $active-bgcolor;
-        color: $active-color;
+        background-color: $active-bgcolor;
         transition: background 0.5s;
-        border-left: 2px solid #05BF85;
+        border-left: 2px solid #202020;
         margin-left: -2px;
 
         &:hover {
-          //background-color: lighten($active-bgcolor, 2%);
+          background-color: lighten($active-bgcolor, 2%);
         }
 
         a {
-          color: #05BF85;
+          color: #121416;
         }
       }
     }
