--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -192,7 +192,7 @@ html[data-theme="dark"]  {
 
   .post-menu {
     .post-menu-title {
-      color: #BBBBBB;
+      color: #ddd;
     }
 
     .post-menu-content {
@@ -200,14 +200,8 @@ html[data-theme="dark"]  {
         border-left: 1px solid #787878;
 
         .active {
-          color: #6DA7E3;
-          //background-color: #2d2d2d;
-          border-left: 2px solid #6DA7E3;
-        }
-
-        .active a {
-          color: #6DA7E3;
-          //background-color: #2d2d2d;
+          background-color: #2d2d2d;
+          border-left: 2px solid #aaa;
         }
 
         a {
@@ -215,7 +209,7 @@ html[data-theme="dark"]  {
         }
 
         a:hover {
-          color: #6DA7E3 !important;
+          color: #fff !important;
         }
       }
     }
