--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,3 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
-
 // Default theme colors
 $theme-colors: (
   "coolblack": #090a0b,
@@ -18,18 +14,22 @@ $brand-colors: (
 
 $theme-name: "{{ site.theme_color }}";
 $brand-name: "{{ site.brand_color }}";
+
+// 기본 색상 설정
 $theme-color: map-get($theme-colors, "snowwhite");
 $brand-color: map-get($brand-colors, "orangered");
 
+// 테마 색상 설정
 @if map-has-key($theme-colors, $theme-name) {
   $theme-color: map-get($theme-colors, $theme-name);
-} @else if str-index($theme-name, "#") == 1 {
+} @else if index($theme-name, "#") == 1 {
   $theme-color: {{ site.theme_color | default: '#ffffff' }};
 }
 
+// 브랜드 색상 설정
 @if map-has-key($brand-colors, $brand-name) {
   $brand-color: map-get($brand-colors, $brand-name);
-} @else if str-index($brand-name, "#") == 1 {
+} @else if index($brand-name, "#") == 1 {
   $brand-color: {{ site.brand_color | default: '#ff5100' }};
 }
 
