목차 패딩 수정

--- a/_sass/misc/article-menu.scss
+++ b/_sass/misc/article-menu.scss
@@ -28,7 +28,7 @@
         }
       }
 
-      a {
+      li a {
         display: flex;
         padding: 2px 8px;
         color: darken($text-color, 10%);
