--- a/_sass/misc/article-menu.scss
+++ b/_sass/misc/article-menu.scss
@@ -30,7 +30,7 @@
 
       li a {
         display: flex;
-        padding: 2px 8px;
+        padding: 4px 8px;
         color: darken($text-color, 10%);
 
         * {
@@ -41,6 +41,10 @@
           text-decoration: none;
           color: lighten($text-color, 20%)!important;
         }
+      }
+
+      .h-h3 {
+        padding: 2px 16px;
       }
 
       .active {
